图片单独缓存及使用。

--- a/app/src/main/res/layout/item_main_list.xml
+++ b/app/src/main/res/layout/item_main_list.xml
@@ -5,25 +5,16 @@
     android:layout_margin="8dp"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        tools:progress="20"/>
     <TextView
         android:id="@+id/tv_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_below="@+id/progress_bar"
+        android:layout_marginTop="8dp"
         tools:text="https://github.com"/>
     <TextView
         android:id="@+id/tv_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/progress_bar"
         android:layout_alignParentRight="true"
         tools:text="已完成"/>
     <TextView
@@ -31,11 +22,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_url"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         tools:text="这是Title"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_title"
+        android:layout_marginBottom="8dp"
+        tools:progress="20"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/tv_title"
-        android:background="#eee" />
+        android:layout_below="@+id/progress_bar"
+        android:background="#ccc" />
 </RelativeLayout>
